5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1795_1599.log
== TEST (2019-05-30 17:03:52) 
-- CODE:
from numpy import *
i=array(float(input("Custo dos itens: ")))
print(i)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:04:42) 
-- CODE:
from numpy import *
i=array((input("Custo dos itens: "))
print(i)


-- ERROR:
File "XXXX", line 3
    print(i)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:04:45) 
-- CODE:
from numpy import *
i=array((input("Custo dos itens: "))
print(i)


-- ERROR:
File "XXXX", line 3
    print(i)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:05:08) 
-- CODE:
from numpy import *
i=array((input("Custo dos itens: "))
print(i)


-- ERROR:
File "XXXX", line 3
    print(i)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:05:37) 
-- CODE:
from numpy import *
i=(input("Custo dos itens: ")
print(i)


-- ERROR:
File "XXXX", line 3
    print(i)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:05:53) 
-- CODE:
from numpy import *
i=input("Custo dos itens: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:06:01) 
-- CODE:
from numpy import *
i=input("Custo dos itens: ")
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:06:11) 
-- CODE:
from numpy import *
i=array(input("Custo dos itens: "))
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:01) 
-- CODE:
from numpy import *
i=input("Custo dos itens: ")
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:07:44) 
-- CODE:
from numpy import *
i=array(input("Custo dos itens: "))
print(sum(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:08:12) 
-- CODE:
from numpy import *
i=array(input("Custo dos itens: "))
sum(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:05) 
-- CODE:
from numpy import *
v=array(float(input("Qual o custo: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:10:37) 
-- CODE:
from numpy import *
v=aray(input("Qual o custo: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:11:18) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:11:33) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
print(max(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:12:08) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
print(max(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:12:41) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
print(max(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:12:56) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
max(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:28) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
max(v, d-type)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:13:41) 
-- CODE:
from numpy import *
v=array(input("Qual o custo: "))
max(v, type)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:15:46) 
-- CODE:
from numpy import *
a=array([1,2,3,4,5])
print(a*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:16:19) 
-- CODE:
from numpy import *
a=array([input("Qual o custo: ")])
print(a*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:16:36) 
-- CODE:
from numpy import *
a=array(input("Qual o custo: "))
print(a*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:16:51) 
-- CODE:
from numpy import *
a=array(input("Qual o custo: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:17:17) 
-- CODE:
from numpy import *
a=array("Qual o custo: ")
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:17:36) 
-- CODE:
from numpy import *
a=array(float("Qual o custo: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:17:53) 
-- CODE:
from numpy import *
a=array(float(input("Qual o custo: ")))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:18:58) 
-- CODE:
from numpy import *
a=array(input("Qual o custo: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:19:17) 
-- CODE:
from numpy import *
a=arange(input("Qual o custo: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:20:26) 
-- CODE:
from numpy import *
a=array(input("Qual o custo: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:20:33) 
-- CODE:
from numpy import *
a=array(input("Qual o custo: "))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:23:57) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
a=(array, dtype=float)
print(a)

-- ERROR:
File "XXXX", line 3
    a=(array, dtype=float)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:10) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
a=(array, dtype=int)
print(a)

-- ERROR:
File "XXXX", line 3
    a=(array, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:42) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
a=array
print(a)

-- ERROR:
File "XXXX", line 3
    a=array
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:24:55) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
a=array(dtype=int)
print(a)

-- ERROR:
File "XXXX", line 3
    a=array(dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:25:47) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
v=array(a, dtype=int)
print(a)

-- ERROR:
File "XXXX", line 3
    v=array(a, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:25:58) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
v=array(a)
print(a)

-- ERROR:
File "XXXX", line 3
    v=array(a)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:27:14) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
v=ones(a, dtype=int)
print(a)

-- ERROR:
File "XXXX", line 3
    v=ones(a, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:27:37) 
-- CODE:
from numpy import *
a=(input("Qual o custo: ")
v=ones(a, dtype=int)
print(v)

-- ERROR:
File "XXXX", line 3
    v=ones(a, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:27:59) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=ones(a, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:29:23) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=ones(a, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:30:28) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=ones(a, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:30:50) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=ones(a)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:31:34) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=array(a)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:31:59) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=array(a)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:32:09) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=array(a)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:33:51) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=array(a)
sum(a)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:34:20) 
-- CODE:
from numpy import *
a=input("Qual o custo: ")
v=array(a)
print(sum(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:36:23) 
-- CODE:
from numpy import *
a=input("Um numero: ")
v=ones(a,dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:40) 
-- CODE:
from numpy import *
a=input("Um numero: ")
v=ones(a, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:39:07) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:39:28) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
print(sum((a))

-- ERROR:
File "XXXX", line 4
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:39:39) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
print(sum(a))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:40:43) 
-- CODE:
from numpy import *
a=array(eval(float(input("Qual o custo: "))))
if (sum(a) > 80.0)

-- ERROR:
File "XXXX", line 3
    if (sum(a) > 80.0)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:40:53) 
-- CODE:
from numpy import *
a=array(eval(float(input("Qual o custo: "))))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:04) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:11) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:53) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:04) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
print(b)
if 


-- ERROR:
File "XXXX", line 5
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:43:53) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*15/100)
	print(ct)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:08) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*15/100)
	print(ct)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:45:14) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*0.15)
	print(ct)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:46:39) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*0.15)
	print(round(ct,2))
else:
	print(round(b,2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:47:27) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*0.15)
	print(round(ct,2))
else:
	print(round(b,2))
	


-- EXECUTION TIME:
1.60398
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
70.99
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
128.61
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:51:39) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
print(a[1])
if (b  > 80.0):
	ct=(b-b*0.15)
	print(round(ct,2))
else:
	print(round(b,2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:52:13) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*0.15)
	print(round(ct,2))
else:
	print(round(b,2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:18) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (a[0] > 80.0 or a[1] > 80.0 a[2] > 80.0):
	ct=(b-b*0.15)
	print(round(ct,2))
else:
	print(round(b,2))
	


-- ERROR:
File "XXXX", line 4
    if (a[0] > 80.0 or a[1] > 80.0 a[2] > 80.0):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:54:37) 
-- CODE:
from numpy import *
a=array(eval(input("Qual o custo: ")))
b=sum(a)
if (b  > 80.0):
	ct=(b-b*0.15)
	print(round(ct,2))
else:
	print(round(b,2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
